# numcase

./: CMakeLists.txt  README.md  main.cpp
lib/: Chebyshev.cpp  Chebyshev.h  ChebyshevGauss.cpp  ChebyshevGauss.h  Dekker.cpp  Dekker.h  Func.cpp  Func.h  LeastSquares.cpp  LeastSquares.h  LeastSquaresPoly.cpp  LeastSquaresPoly.h  Matrix.cpp  Matrix.h  Newton.cpp  Newton.h  NewtonMulti.cpp  NewtonMulti.h  Poly.cpp  Poly.h  Remez.cpp  Remez.h  Vector.cpp  Vector.h  prec.h
